Added modules logic and HashGenerator module

--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "node src/modules/generateModule.mjs & vite",
+    "build": "node src/modules/generateModule.mjs & vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "balm-ui": "^10.22.3",
     "bootstrap": "^5.3.1",
-    "vue": "^3.3.4"
+    "crypto-js": "^4.1.1",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
