--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node src/modules/generateModule.mjs & vite",
-    "build": "node src/modules/generateModule.mjs & vite build",
-    "preview": "vite preview",
-    "generateModule": "node src/modules/generateModule.mjs"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
