--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.8",
     "balm-ui": "^10.22.3",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "crypto-js": "^4.1.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
