--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "crypto-js": "^4.1.1",
+    "marked": "^7.0.0",
     "moment": "^2.29.4",
     "pinia": "^2.1.6",
     "spacetime": "^7.4.5",
