--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "crypto-js": "^4.1.1",
+    "js-yaml": "^4.1.0",
+    "json-to-pretty-yaml": "^1.2.2",
     "marked": "^7.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
@@ -25,6 +27,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.9"
   }
 }
