--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "crypto-js": "^4.1.1",
+    "jose": "^4.14.4",
     "js-yaml": "^4.1.0",
     "json-to-pretty-yaml": "^1.2.2",
     "jwt-decode": "^3.1.2",
