--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@popperjs/core": "^2.11.8",
     "@vuepic/vue-datepicker": "^5.4.0",
     "balm-ui": "^10.22.3",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "crypto-js": "^4.1.1",
+    "highlight.js": "^11.8.0",
     "jose": "^4.14.4",
     "js-yaml": "^4.1.0",
     "json-to-pretty-yaml": "^1.2.2",
