--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "crypto-js": "^4.1.1",
+    "esbuild": "^0.19.2",
     "highlight.js": "^11.8.0",
     "jose": "^4.14.4",
     "js-yaml": "^4.1.0",
