--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "pinia": "^2.1.6",
+    "sql-formatter": "^12.2.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
