Added electron to the project and added build workflow

--- a/package.json
+++ b/package.json
@@ -1,12 +1,44 @@
 {
   "name": "devta",
+  "main": "main.js",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "build": {
+    "appId": "in.techrail.devta",
+    "productName": "Devta",
+    "directories": {
+      "buildResources": "dist"
+    },
+    "win": {
+      "icon": "./dist/logo.png"
+    },
+    "linux": {
+      "target": [
+        "AppImage"
+      ],
+      "category": "Utility",
+      "icon": "./dist/logo.png"
+    },
+    "files": [
+      "dist/**/*",
+      "main.js",
+      "preload.js"
+    ],
+    "publish": {
+      "provider": "github",
+      "repo": "devta",
+      "owner": "pratyushtiwary",
+      "releaseType": "draft"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:dev": "electron .",
+    "postinstall": "electron-builder install-app-deps",
+    "electron:build-linux": "electron-builder --linux --publish always",
+    "electron:build-windows": "electron-builder --linux --publish always"
   },
   "dependencies": {
     "@highlightjs/vue-plugin": "^2.1.0",
@@ -15,6 +47,8 @@
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "crypto-js": "^4.1.1",
+    "electron": "^26.2.2",
+    "electron-is-dev": "^2.0.0",
     "esbuild": "^0.19.2",
     "highlight.js": "^11.8.0",
     "jose": "^4.14.4",
@@ -32,6 +66,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "electron-builder": "^24.6.4",
     "vite": "^4.4.9"
   }
 }
