--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "pinia": "^2.1.6",
+    "registry-url": "^6.0.1",
     "sql-formatter": "^12.2.4",
     "sql-query-identifier": "^2.5.0",
     "vue": "^3.3.4",
